--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   --text-color: #fff;
   --card-bg: rgba(24,24,24,0.7);
   --card-border: rgba(255,255,255,0.07);
-  --accent: #800020;          /* BURGUNDY */
-  --accent-hover: #66001a;    /* DARK BURGUNDY */
+  --accent: #b0003a;          /* BRIGHTER BURGUNDY */
+  --accent-hover: #88002a;    /* DARKER HOVER BURGUNDY */
 }
 
 /* Light theme */
@@ -21,8 +21,8 @@ body.light-theme {
   --text-color: #111;
   --card-bg: rgba(255,255,255,0.65);
   --card-border: rgba(0,0,0,0.1);
-  --accent: #800020;
-  --accent-hover: #66001a;
+  --accent: #b0003a;
+  --accent-hover: #88002a;
 }
 
 /* GLOBAL */
@@ -133,7 +133,7 @@ body.light-theme .logo-img {
   border-radius: 10px;
   text-decoration: none;
   transition: 0.25s ease;
-  box-shadow: 0 6px 16px rgba(128,0,32,0.35);
+  box-shadow: 0 6px 16px rgba(176,0,58,0.35);
   cursor: pointer;
   border: none;
   margin-bottom: 6px;
@@ -142,7 +142,7 @@ body.light-theme .logo-img {
 .login-btn:hover {
   background: var(--accent-hover);
   transform: translateY(-2px);
-  box-shadow: 0 10px 22px rgba(128,0,32,0.45);
+  box-shadow: 0 10px 22px rgba(176,0,58,0.45);
 }
 
 /* Guest Mode text styled like signup link */
@@ -179,7 +179,7 @@ body.light-theme .input-field {
 .input-field:focus {
   border-color: var(--accent);
   outline: none;
-  box-shadow: 0 0 8px rgba(128,0,32,0.35);
+  box-shadow: 0 0 8px rgba(176,0,58,0.35);
 }
 
 /* FORM TRANSITIONS */
