--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ footer a:hover { color: var(--accent); }
     <p>Your tool to <strong>LOVE</strong> what you learn</p>
 
     <!-- Login button -->
-    <a class="login-btn" id="startLoginBtn">🔐 Login to Continue</a>
+    <a class="login-btn" id="startLoginBtn">Login to Continue</a>
     <!-- Guest Mode text link -->
     <span class="guest-text" id="guestBtn">Guest Mode</span>
 
