--- a/index.html
+++ b/index.html
@@ -1,83 +1,154 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Patholytica — by MedicineBank</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root {
-  --bg-color: #0d0d0d;
-  --text-color: #fff;
-  --card-bg: rgba(24,24,24,0.7);
-  --card-border: rgba(255,255,255,0.07);
-  --accent: #b0003a;          /* BRIGHTER BURGUNDY */
-  --accent-hover: #88002a;    /* DARKER HOVER BURGUNDY */
+  --bg-color: #0a0a0a;
+  --bg-gradient: linear-gradient(135deg, #0a0a0a 0%, #1a0a14 100%);
+  --text-color: #ffffff;
+  --text-secondary: #a0a0a0;
+  --card-bg: rgba(20,20,20,0.85);
+  --card-border: rgba(255,255,255,0.08);
+  --accent: #e8184f;
+  --accent-hover: #c01540;
+  --accent-glow: rgba(232, 24, 79, 0.25);
+  --input-bg: rgba(255,255,255,0.05);
+  --input-border: rgba(255,255,255,0.1);
 }
 
-/* Light theme */
 body.light-theme {
-  --bg-color: #f5f5f5;
-  --text-color: #111;
-  --card-bg: rgba(255,255,255,0.65);
-  --card-border: rgba(0,0,0,0.1);
-  --accent: #b0003a;
-  --accent-hover: #88002a;
+  --bg-color: #f8f9fa;
+  --bg-gradient: linear-gradient(135deg, #f8f9fa 0%, #fef0f3 100%);
+  --text-color: #1a1a1a;
+  --text-secondary: #666666;
+  --card-bg: rgba(255,255,255,0.95);
+  --card-border: rgba(0,0,0,0.08);
+  --accent: #e8184f;
+  --accent-hover: #c01540;
+  --accent-glow: rgba(232, 24, 79, 0.15);
+  --input-bg: rgba(0,0,0,0.02);
+  --input-border: rgba(0,0,0,0.12);
 }
 
-/* GLOBAL */
-* { box-sizing: border-box; }
-html, body { margin:0; padding:0; height:100%; font-family: "Inter", Arial, sans-serif; }
+* { 
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body { 
+  height: 100%; 
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 body {
-  background: var(--bg-color);
+  background: var(--bg-gradient);
   color: var(--text-color);
   display: flex;
   flex-direction: column;
-  transition: background 0.35s ease;
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow-x: hidden;
+}
+
+/* Animated background elements */
+body::before {
+  content: '';
+  position: fixed;
+  top: -50%;
+  right: -50%;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, var(--accent-glow) 0%, transparent 70%);
+  opacity: 0.3;
+  animation: float 20s ease-in-out infinite;
+  pointer-events: none;
+}
+
+body::after {
+  content: '';
+  position: fixed;
+  bottom: -50%;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, var(--accent-glow) 0%, transparent 70%);
+  opacity: 0.2;
+  animation: float 25s ease-in-out infinite reverse;
+  pointer-events: none;
+}
+
+@keyframes float {
+  0%, 100% { transform: translate(0, 0) scale(1); }
+  50% { transform: translate(30px, -30px) scale(1.1); }
 }
 
 /* HEADER */
 .header-wrapper {
   position: sticky;
   top: 0;
-  background: var(--bg-color);
+  background: rgba(10, 10, 10, 0.8);
+  backdrop-filter: blur(20px) saturate(180%);
   padding-top: env(safe-area-inset-top);
   border-bottom: 1px solid var(--card-border);
   z-index: 40;
+  transition: all 0.3s ease;
+}
+
+body.light-theme .header-wrapper {
+  background: rgba(248, 249, 250, 0.8);
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 18px;
+  padding: 20px 24px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .logo-img {
-  height: 32px;
+  height: 38px;
   width: auto;
-  transition: filter 0.25s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
+  filter: drop-shadow(0 2px 8px rgba(232, 24, 79, 0.3));
+}
+
+.logo-img:hover {
+  transform: scale(1.05);
 }
 
 body.light-theme .logo-img {
-  filter: invert(1);
+  filter: invert(1) drop-shadow(0 2px 8px rgba(232, 24, 79, 0.2));
 }
 
 .theme-toggle {
-  padding: 6px 14px;
-  font-size: 12.5px;
-  background: transparent;
-  border-radius: 6px;
-  border: 1px solid var(--card-border);
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: 500;
+  background: var(--input-bg);
+  border-radius: 10px;
+  border: 1px solid var(--input-border);
   color: var(--text-color);
   cursor: pointer;
-  transition: 0.25s ease;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  backdrop-filter: blur(10px);
 }
+
 .theme-toggle:hover {
   border-color: var(--accent);
-  color: var(--accent);
+  background: var(--accent-glow);
+  transform: translateY(-2px);
 }
 
 /* MAIN CONTENT */
@@ -86,132 +157,293 @@ body.light-theme .logo-img {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: calc(40px + env(safe-area-inset-top))
-           calc(20px + env(safe-area-inset-left))
-           calc(40px + env(safe-area-inset-bottom))
-           calc(20px + env(safe-area-inset-right));
+  padding: calc(60px + env(safe-area-inset-top))
+           calc(24px + env(safe-area-inset-left))
+           calc(60px + env(safe-area-inset-bottom))
+           calc(24px + env(safe-area-inset-right));
+  position: relative;
+  z-index: 1;
 }
 
 .login-card {
   width: 100%;
-  max-width: 430px;
-  padding: 55px 42px;
+  max-width: 460px;
+  padding: 48px;
   background: var(--card-bg);
-  backdrop-filter: blur(22px);
-  border-radius: 16px;
+  backdrop-filter: blur(40px) saturate(180%);
+  border-radius: 24px;
   border: 1px solid var(--card-border);
-  box-shadow: 0 8px 28px rgba(0,0,0,0.45);
+  box-shadow: 
+    0 20px 60px rgba(0,0,0,0.3),
+    0 0 0 1px rgba(255,255,255,0.05) inset;
   text-align: center;
-  animation: fadeUp 0.5s ease both;
-  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  animation: fadeUp 0.6s cubic-bezier(0.4, 0, 0.2, 1) both;
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
+
+.login-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, var(--accent), transparent);
+  opacity: 0.5;
+  border-radius: 24px 24px 0 0;
+}
+
 .login-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 12px 35px rgba(0,0,0,0.55);
+  transform: translateY(-8px);
+  box-shadow: 
+    0 30px 80px rgba(0,0,0,0.4),
+    0 0 0 1px rgba(255,255,255,0.08) inset;
 }
 
 .login-card h1 {
-  font-size: 32px;
+  font-size: 36px;
+  font-weight: 700;
   margin-bottom: 12px;
+  background: linear-gradient(135deg, var(--text-color) 0%, var(--accent) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  letter-spacing: -0.5px;
 }
 
 .login-card p {
-  font-size: 15px;
-  margin-bottom: 20px;
-  color: #999;
-  line-height: 1.55;
+  font-size: 16px;
+  margin-bottom: 32px;
+  color: var(--text-secondary);
+  line-height: 1.6;
+  font-weight: 400;
 }
 
 /* BUTTONS */
 .login-btn {
   display: inline-block;
-  padding: 16px 42px;
+  padding: 18px 48px;
   font-size: 16px;
   font-weight: 600;
-  background: var(--accent);
+  background: linear-gradient(135deg, var(--accent) 0%, #c01540 100%);
   color: #fff;
-  border-radius: 10px;
+  border-radius: 12px;
   text-decoration: none;
-  transition: 0.25s ease;
-  box-shadow: 0 6px 16px rgba(176,0,58,0.35);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 
+    0 8px 24px var(--accent-glow),
+    0 0 0 1px rgba(255,255,255,0.1) inset;
   cursor: pointer;
   border: none;
-  margin-bottom: 6px;
+  margin-bottom: 8px;
   width: 100%;
-}
-.login-btn:hover {
-  background: var(--accent-hover);
-  transform: translateY(-2px);
-  box-shadow: 0 10px 22px rgba(176,0,58,0.45);
+  position: relative;
+  overflow: hidden;
 }
 
-/* Guest Mode text styled like signup link */
+.login-btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  transition: left 0.5s ease;
+}
+
+.login-btn:hover::before {
+  left: 100%;
+}
+
+.login-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 
+    0 12px 32px var(--accent-glow),
+    0 0 0 1px rgba(255,255,255,0.2) inset;
+}
+
+.login-btn:active {
+  transform: translateY(-1px);
+}
+
 .guest-text {
-  display: block;
-  font-size: 14px;
+  display: inline-block;
+  font-size: 15px;
   color: var(--accent);
-  margin-top: 6px;
+  margin-top: 12px;
   cursor: pointer;
   font-weight: 600;
   text-decoration: none;
+  transition: all 0.3s ease;
+  position: relative;
 }
+
+.guest-text::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: var(--accent);
+  transition: width 0.3s ease;
+}
+
+.guest-text:hover::after {
+  width: 100%;
+}
+
 .guest-text:hover {
-  text-decoration: underline;
+  color: var(--accent-hover);
 }
 
 /* INPUT FIELDS */
-.input-field {
-  width: 100%;
-  padding: 14px;
-  margin-bottom: 14px;
-  border-radius: 8px;
-  border: 1px solid var(--card-border);
-  background: rgba(0,0,0,0.25);
-  color: var(--text-color);
-  font-size: 15px;
-  transition: 0.25s ease;
+.input-group {
+  position: relative;
+  margin-bottom: 20px;
 }
 
-body.light-theme .input-field {
-  background: rgba(255,255,255,0.7);
+.input-field {
+  width: 100%;
+  padding: 16px 16px 16px 16px;
+  border-radius: 12px;
+  border: 1.5px solid var(--input-border);
+  background: var(--input-bg);
+  color: var(--text-color);
+  font-size: 15px;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: inherit;
+}
+
+.input-field::placeholder {
+  color: var(--text-secondary);
+  opacity: 0.6;
 }
 
 .input-field:focus {
   border-color: var(--accent);
   outline: none;
-  box-shadow: 0 0 8px rgba(176,0,58,0.35);
+  background: var(--card-bg);
+  box-shadow: 
+    0 0 0 4px var(--accent-glow),
+    0 4px 12px rgba(0,0,0,0.1);
+  transform: translateY(-2px);
 }
 
 /* FORM TRANSITIONS */
 #loginForm, #signupForm {
-  transition: opacity 0.25s ease;
+  transition: opacity 0.3s ease;
+}
+
+/* Checkbox styling */
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+  font-size: 13px;
+  color: var(--text-secondary);
+  cursor: pointer;
+  user-select: none;
+}
+
+.checkbox-label input[type="checkbox"] {
+  margin-right: 10px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  accent-color: var(--accent);
+}
+
+.checkbox-label a {
+  color: var(--accent);
+  text-decoration: none;
+  margin: 0 4px;
+  transition: all 0.3s ease;
+}
+
+.checkbox-label a:hover {
+  text-decoration: underline;
+  color: var(--accent-hover);
+}
+
+/* Link styling */
+.form-link {
+  margin-top: 24px;
+  font-size: 14px;
+  color: var(--text-secondary);
+}
+
+.form-link a {
+  color: var(--accent);
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+.form-link a:hover {
+  color: var(--accent-hover);
+  text-decoration: underline;
 }
 
 /* FOOTER */
 footer {
   text-align: center;
-  padding: 16px;
-  font-size: 11px;
+  padding: 24px;
+  font-size: 12px;
   border-top: 1px solid var(--card-border);
-  color: #888;
+  color: var(--text-secondary);
+  background: rgba(10, 10, 10, 0.5);
+  backdrop-filter: blur(20px);
+  position: relative;
+  z-index: 1;
 }
+
+body.light-theme footer {
+  background: rgba(248, 249, 250, 0.5);
+}
+
 footer a {
-  color: #888;
-  margin: 0 3px;
+  color: var(--text-secondary);
+  margin: 0 8px;
   text-decoration: none;
-  transition: color 0.25s ease;
+  transition: all 0.3s ease;
+  position: relative;
 }
-footer a:hover { color: var(--accent); }
+
+footer a:hover { 
+  color: var(--accent);
+}
 
 /* Animations */
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(20px); }
-  to   { opacity: 1; transform: translateY(0); }
+  from { 
+    opacity: 0; 
+    transform: translateY(30px);
+  }
+  to { 
+    opacity: 1; 
+    transform: translateY(0);
+  }
 }
 
+/* Responsive */
 @media (max-width: 640px) {
-  .login-card { padding: 45px 30px; }
-  .login-card h1 { font-size: 27px; }
+  .login-card { 
+    padding: 36px 28px;
+    border-radius: 20px;
+  }
+  .login-card h1 { 
+    font-size: 28px;
+  }
+  .header {
+    padding: 16px 20px;
+  }
+  .logo-img {
+    height: 32px;
+  }
 }
 </style>
 
@@ -219,69 +451,88 @@ footer a:hover { color: var(--accent); }
 <body>
 
 <!-- HEADER -->
+
 <div class="header-wrapper">
   <div class="header">
     <a href="https://patholytica.com">
       <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
     </a>
-    <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()">🌓 Theme</button>
   </div>
 </div>
 
 <!-- MAIN -->
+
 <div class="login-container">
   <div class="login-card">
 
-    <h1>Welcome to Patholytica</h1>
-    <p>Your tool to <strong>LOVE</strong> what you learn</p>
+```
+<h1>Welcome to Patholytica</h1>
+<p>Your tool to <strong>LOVE</strong> what you learn</p>
 
-    <!-- Login button -->
-    <a class="login-btn" id="startLoginBtn">Login to Continue</a>
-    <!-- Guest Mode text link -->
-    <span class="guest-text" id="guestBtn">Guest Mode</span>
+<!-- Login button -->
+<a class="login-btn" id="startLoginBtn">Login to Continue</a>
+<!-- Guest Mode text link -->
+<span class="guest-text" id="guestBtn">Continue as Guest →</span>
 
-    <!-- Hidden login form -->
-    <form id="loginForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
-      <input type="text" placeholder="Email or Username" class="input-field" required>
-      <input type="password" placeholder="Password" class="input-field" required>
+<!-- Hidden login form -->
+<form id="loginForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
+  <div class="input-group">
+    <input type="text" placeholder="Email or Username" class="input-field" required>
+  </div>
+  <div class="input-group">
+    <input type="password" placeholder="Password" class="input-field" required>
+  </div>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
-        Continue
-      </button>
+  <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
+    Continue
+  </button>
 
-      <p style="margin-top:20px; font-size:14px; color:#999;">
-        Don't have an account? 
-        <a href="#" id="showSignupLink" style="color:var(--accent); text-decoration:none; font-weight:600;">Sign up</a>
-      </p>
-    </form>
+  <p class="form-link">
+    Don't have an account? 
+    <a href="#" id="showSignupLink">Sign up</a>
+  </p>
+</form>
 
-    <!-- Hidden signup form -->
-    <form id="signupForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
-      <input type="text" placeholder="Full Name" class="input-field" required>
-      <input type="email" placeholder="Email Address" class="input-field" required>
-      <input type="text" placeholder="Username" class="input-field" required>
-      <input type="password" placeholder="Password (min. 8 characters)" class="input-field" minlength="8" required>
-      <input type="password" placeholder="Confirm Password" class="input-field" required>
+<!-- Hidden signup form -->
+<form id="signupForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
+  <div class="input-group">
+    <input type="text" placeholder="Full Name" class="input-field" required>
+  </div>
+  <div class="input-group">
+    <input type="email" placeholder="Email Address" class="input-field" required>
+  </div>
+  <div class="input-group">
+    <input type="text" placeholder="Username" class="input-field" required>
+  </div>
+  <div class="input-group">
+    <input type="password" placeholder="Password (min. 8 characters)" class="input-field" minlength="8" required>
+  </div>
+  <div class="input-group">
+    <input type="password" placeholder="Confirm Password" class="input-field" required>
+  </div>
 
-      <label style="display:flex; align-items:center; justify-content:center; margin:16px 0; font-size:13px; color:#999;">
-        <input type="checkbox" required style="margin-right:8px;">
-        I agree to the <a href="#" style="color:var(--accent); text-decoration:none; margin:0 3px;">Terms</a> and <a href="#" style="color:var(--accent); text-decoration:none; margin:0 3px;">Privacy Policy</a>
-      </label>
+  <label class="checkbox-label">
+    <input type="checkbox" required>
+    I agree to the <a href="#">Terms</a> and <a href="#">Privacy Policy</a>
+  </label>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
-        Create Account
-      </button>
+  <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
+    Create Account
+  </button>
 
-      <p style="margin-top:20px; font-size:14px; color:#999;">
-        Already have an account? 
-        <a href="#" id="showLoginLink" style="color:var(--accent); text-decoration:none; font-weight:600;">Login</a>
-      </p>
-    </form>
+  <p class="form-link">
+    Already have an account? 
+    <a href="#" id="showLoginLink">Login</a>
+  </p>
+</form>
+```
 
   </div>
 </div>
 
 <!-- FOOTER -->
+
 <footer>
   © 2025 Patholytica by MedicineBank. All rights reserved.
   <br>
