--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ footer a:hover {
     <a href="https://patholytica.com">
       <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
     </a>
-    <button class="theme-toggle" onclick="toggleTheme()">🌓 Theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
   </div>
 </div>
 
