--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@ body.light-theme .header-wrapper {
   width: auto;
   transition: all 0.3s ease;
   cursor: pointer;
-  filter: drop-shadow(0 2px 8px rgba(232, 24, 79, 0.3));
 }
 
 .logo-img:hover {
@@ -129,7 +128,7 @@ body.light-theme .header-wrapper {
 }
 
 body.light-theme .logo-img {
-  filter: invert(1) drop-shadow(0 2px 8px rgba(232, 24, 79, 0.2));
+  filter: invert(1);
 }
 
 .theme-toggle {
@@ -432,17 +431,42 @@ footer a:hover {
 /* Responsive */
 @media (max-width: 640px) {
   .login-card { 
-    padding: 36px 28px;
+    padding: 32px 24px;
     border-radius: 20px;
+    max-width: calc(100% - 32px);
   }
   .login-card h1 { 
-    font-size: 28px;
+    font-size: 26px;
+    margin-bottom: 10px;
+  }
+  .login-card p {
+    font-size: 15px;
+    margin-bottom: 28px;
   }
   .header {
-    padding: 16px 20px;
+    padding: 14px 16px;
   }
   .logo-img {
-    height: 32px;
+    height: 30px;
+  }
+  .theme-toggle {
+    padding: 8px 16px;
+    font-size: 13px;
+  }
+  .login-btn {
+    padding: 16px 32px;
+    font-size: 15px;
+  }
+  .input-field {
+    padding: 14px;
+    font-size: 16px; /* Prevents zoom on iOS */
+  }
+  .login-container {
+    padding: 32px 16px;
+  }
+  footer {
+    padding: 20px 16px;
+    font-size: 11px;
   }
 }
 </style>
