--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-```
+stay tuned ~Eyad
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -385,4 +385,3 @@ signupForm.addEventListener("submit", (e) => {
 
 </body>
 </html>
-```
