--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   --text-color: #fff;
   --card-bg: rgba(24,24,24,0.7);
   --card-border: rgba(255,255,255,0.07);
-  --accent: #b0003a;          /* BRIGHTER BURGUNDY */
-  --accent-hover: #88002a;    /* DARKER HOVER BURGUNDY */
+  --accent: #b0003a;
+  --accent-hover: #88002a;
 }
 
-/* Light theme */
 body.light-theme {
   --bg-color: #f5f5f5;
   --text-color: #111;
@@ -25,7 +24,6 @@ body.light-theme {
   --accent-hover: #88002a;
 }
 
-/* GLOBAL */
 * { box-sizing: border-box; }
 html, body { margin:0; padding:0; height:100%; font-family: "Inter", Arial, sans-serif; }
 
@@ -122,7 +120,6 @@ body.light-theme .logo-img {
   line-height: 1.55;
 }
 
-/* BUTTONS */
 .login-btn {
   display: inline-block;
   padding: 16px 42px;
@@ -145,7 +142,7 @@ body.light-theme .logo-img {
   box-shadow: 0 10px 22px rgba(176,0,58,0.45);
 }
 
-/* Guest Mode text styled like signup link */
+/* Guest Mode text */
 .guest-text {
   display: block;
   font-size: 14px;
@@ -159,7 +156,6 @@ body.light-theme .logo-img {
   text-decoration: underline;
 }
 
-/* INPUT FIELDS */
 .input-field {
   width: 100%;
   padding: 14px;
@@ -182,12 +178,10 @@ body.light-theme .input-field {
   box-shadow: 0 0 8px rgba(176,0,58,0.35);
 }
 
-/* FORM TRANSITIONS */
 #loginForm, #signupForm {
   transition: opacity 0.25s ease;
 }
 
-/* FOOTER */
 footer {
   text-align: center;
   padding: 16px;
@@ -203,7 +197,6 @@ footer a {
 }
 footer a:hover { color: var(--accent); }
 
-/* Animations */
 @keyframes fadeUp {
   from { opacity: 0; transform: translateY(20px); }
   to   { opacity: 1; transform: translateY(0); }
@@ -235,27 +228,25 @@ footer a:hover { color: var(--accent); }
     <h1>Welcome to Patholytica</h1>
     <p>Your tool to <strong>LOVE</strong> what you learn</p>
 
-    <!-- Login button -->
     <a class="login-btn" id="startLoginBtn">Login to Continue</a>
-    <!-- Guest Mode text link -->
     <span class="guest-text" id="guestBtn">Guest Mode</span>
 
-    <!-- Hidden login form -->
+    <!-- Login form -->
     <form id="loginForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
-      <input type="text" placeholder="Email or Username" class="input-field" required>
+      <input type="email" placeholder="Email Address" class="input-field" required>
       <input type="password" placeholder="Password" class="input-field" required>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
-        Continue
-      </button>
+      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Continue</button>
 
       <p style="margin-top:20px; font-size:14px; color:#999;">
         Don't have an account? 
-        <a href="#" id="showSignupLink" style="color:var(--accent); text-decoration:none; font-weight:600;">Sign up</a>
+        <a href="#" id="showSignupLink" style="color:var(--accent); text-decoration:none; font-weight:600;">
+          Sign up
+        </a>
       </p>
     </form>
 
-    <!-- Hidden signup form -->
+    <!-- Signup form -->
     <form id="signupForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
       <input type="text" placeholder="Full Name" class="input-field" required>
       <input type="email" placeholder="Email Address" class="input-field" required>
@@ -265,16 +256,15 @@ footer a:hover { color: var(--accent); }
 
       <label style="display:flex; align-items:center; justify-content:center; margin:16px 0; font-size:13px; color:#999;">
         <input type="checkbox" required style="margin-right:8px;">
-        I agree to the <a href="#" style="color:var(--accent); text-decoration:none; margin:0 3px;">Terms</a> and <a href="#" style="color:var(--accent); text-decoration:none; margin:0 3px;">Privacy Policy</a>
+        I agree to the <a href="#" style="color:var(--accent); margin:0 3px;">Terms</a> 
+        and <a href="#" style="color:var(--accent); margin:0 3px;">Privacy Policy</a>
       </label>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">
-        Create Account
-      </button>
+      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Create Account</button>
 
       <p style="margin-top:20px; font-size:14px; color:#999;">
-        Already have an account? 
-        <a href="#" id="showLoginLink" style="color:var(--accent); text-decoration:none; font-weight:600;">Login</a>
+        Already have an account?
+        <a href="#" id="showLoginLink" style="color:var(--accent); font-weight:600;">Login</a>
       </p>
     </form>
 
@@ -290,7 +280,27 @@ footer a:hover { color: var(--accent); }
   <a href="#">Contact</a>
 </footer>
 
+<!-- FIREBASE -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+
 <script>
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBs6V0yY14cuLBXB1nciZ-X0eyAiodC-Ak",
+  authDomain: "patholytica.firebaseapp.com",
+  projectId: "patholytica",
+  storageBucket: "patholytica.firebasestorage.app",
+  messagingSenderId: "738430635282",
+  appId: "1:738430635282:web:8451ef380447c7611137cb"
+};
+
+// Init Firebase
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+
+
+// THEME
 function toggleTheme(){
   document.body.classList.toggle('light-theme');
   localStorage.setItem(
@@ -303,7 +313,7 @@ if (localStorage.getItem("theme") === "light") {
   document.body.classList.add("light-theme");
 }
 
-/* Login button → form reveal */
+// UI elements
 const startBtn = document.getElementById("startLoginBtn");
 const form = document.getElementById("loginForm");
 const signupForm = document.getElementById("signupForm");
@@ -311,6 +321,7 @@ const showSignupLink = document.getElementById("showSignupLink");
 const showLoginLink = document.getElementById("showLoginLink");
 const guestBtn = document.getElementById("guestBtn");
 
+// Show login form
 startBtn.addEventListener("click", () => {
   startBtn.style.opacity = "0";
   guestBtn.style.opacity = "0";
@@ -324,16 +335,16 @@ startBtn.addEventListener("click", () => {
   }, 250);
 });
 
-// Guest mode click
+// Guest mode
 guestBtn.addEventListener("click", () => {
   alert("Entering Guest Mode. Limited features available.");
 });
 
-// Toggle to signup form
+// Switch to signup
 showSignupLink.addEventListener("click", (e) => {
   e.preventDefault();
   form.style.opacity = "0";
-  
+
   setTimeout(() => {
     form.style.display = "none";
     signupForm.style.display = "block";
@@ -341,11 +352,11 @@ showSignupLink.addEventListener("click", (e) => {
   }, 250);
 });
 
-// Toggle back to login form
+// Back to login
 showLoginLink.addEventListener("click", (e) => {
   e.preventDefault();
   signupForm.style.opacity = "0";
-  
+
   setTimeout(() => {
     signupForm.style.display = "none";
     form.style.display = "block";
@@ -353,32 +364,42 @@ showLoginLink.addEventListener("click", (e) => {
   }, 250);
 });
 
-// Form submissions
+
+// LOGIN
 form.addEventListener("submit", (e) => {
   e.preventDefault();
-  alert("Login functionality would connect here. Welcome to Patholytica!");
+
+  const inputs = form.querySelectorAll("input");
+  const email = inputs[0].value;
+  const password = inputs[1].value;
+
+  auth.signInWithEmailAndPassword(email, password)
+    .then(() => {
+      window.location.href = "dashboard.html";
+    })
+    .catch(err => alert(err.message));
 });
 
+
+// SIGNUP
 signupForm.addEventListener("submit", (e) => {
   e.preventDefault();
-  
-  const passwords = signupForm.querySelectorAll('input[type="password"]');
-  const password = passwords[0].value;
-  const confirmPassword = passwords[1].value;
-  
+
+  const inputs = signupForm.querySelectorAll("input");
+  const email = inputs[1].value;
+  const password = inputs[3].value;
+  const confirmPassword = inputs[4].value;
+
   if (password !== confirmPassword) {
-    alert("Passwords do not match. Please try again.");
+    alert("Passwords do not match.");
     return;
   }
-  
-  alert("Account created successfully! Welcome to Patholytica!");
-  
-  signupForm.style.opacity = "0";
-  setTimeout(() => {
-    signupForm.style.display = "none";
-    form.style.display = "block";
-    form.style.opacity = "1";
-  }, 250);
+
+  auth.createUserWithEmailAndPassword(email, password)
+    .then(() => {
+      window.location.href = "dashboard.html";
+    })
+    .catch(err => alert(err.message));
 });
 </script>
 
