--- a/index.html
+++ b/index.html
@@ -144,10 +144,29 @@ body.light-theme .logo-img {
 .google-btn {
   background: #4285F4;
   box-shadow: 0 6px 16px rgba(66,133,244,0.35);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
 }
 .google-btn:hover {
   background: #357ae8;
   box-shadow: 0 10px 22px rgba(66,133,244,0.45);
+}
+
+.google-icon {
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 2px;
+  padding: 2px;
+  display: inline-block;
+}
+
+.google-icon svg {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .divider {
@@ -246,7 +265,8 @@ footer a:hover { color: var(--accent); }
 
 <div class="login-container">
   <div class="login-card">
-    
+
+```
 <h1>Welcome to Patholytica</h1>
 <p>Your tool to <strong>LOVE</strong> what you learn</p>
 
@@ -303,6 +323,7 @@ footer a:hover { color: var(--accent); }
     <a href="#" id="showLoginLink" style="color:var(--accent); font-weight:600;">Login</a>
   </p>
 </form>
+```
 
   </div>
 </div>
